--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "5.3-axios",
+  "name": "express-random-activity-finder",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
-  "homepage": "",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "bugs": "",
-  "keywords": [],
-  "author": "",
-  "contributors": [],
   "scripts": {
-    "dev": "",
-    "test": ""
+    "start": "node server.js"
   },
-  "description": "",
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
